objects/ssot__LoyaltyMemberCurrency__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyTypeId__c</fullName>
        <label>Currency Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirablePointsNumber__c</fullName>
        <label>Expirable Points</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Member Currency Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastAccrualProcessedDate__c</fullName>
        <label>Last Accrual Processed Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastEscrowProcessedDateTime__c</fullName>
        <label>Last Escrow Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastExpirationProcessRunDate__c</fullName>
        <label>Last Expiration Process Run Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastPointsAggregationDateTime__c</fullName>
        <label>Last Points Aggregation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastResetDate__c</fullName>
        <label>Last Reset Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyMemberTierId__c</fullName>
        <label>Loyalty Member Tier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramMemberId__c</fullName>
        <label>Loyalty Program Member</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextResetDate__c</fullName>
        <label>Next Reset Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PointsBalBeforeSecondLastReset__c</fullName>
        <label>Points Bal Bef Second To Last Reset</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PointsBalanceBeforeResetNumber__c</fullName>
        <label>Points Balance Before Reset</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PointsBalanceNumber__c</fullName>
        <label>Points Balance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RedemStlPendFromDateTime__c</fullName>
        <label>Redemption Stl Pending From Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalEscrowAccruedPointsNumber__c</fullName>
        <label>Total Escrow Points Accrued</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalEscrowRolloverPointsNumber__c</fullName>
        <label>Total Escrow Rollover Points</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPointsAccruedNumber__c</fullName>
        <label>Total Points Accrued</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPointsExpiredNumber__c</fullName>
        <label>Total Points Expired</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPointsRedeemedNumber__c</fullName>
        <label>Total Points Redeemed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761180188_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyMemberCurrency_CurrencyTypeId_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>LoyaltyMemberCurrency_CurrencyTypeId_rel</relationshipLabel>
        <relationshipName>rel_1697761180188_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761180282_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyMemberCurrency_LoyaltyMemberT_rel</label>
        <referenceTo>ssot__LoyaltyMemberTier__dlm</referenceTo>
        <relationshipLabel>LoyaltyMemberCurrency_LoyaltyMemberT_rel</relationshipLabel>
        <relationshipName>rel_1697761180282_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761180374_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyMemberCurrency_LoyaltyProgram_rel</label>
        <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
        <relationshipLabel>LoyaltyMemberCurrency_LoyaltyProgram_rel</relationshipLabel>
        <relationshipName>rel_1697761180374_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>